[package]
name = "side-project-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.5"
actix-web = "4.5.1"
anyhow = "1.0.83"
futures = "0.3.30"
langchain-rust = "4.1.2"
lazy_static = "1.4.0"
serde = "1.0.202"
serde_json = "1.0.117"
tera = "1.19.1"
